--- a/Final_Project_Credit_Scoring.ipynb
+++ b/Final_Project_Credit_Scoring.ipynb
@@ -5,7 +5,9 @@
     "colab": {
       "name": "Final Project Credit Scoring",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyPs1PbR0f2feIr3m9sa/HtO",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -16,6 +18,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/warwizz/creditautomation/blob/main/Final_Project_Credit_Scoring.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "metadata": {
@@ -5499,47 +5511,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# leaf_size = list(range(1,50))\n",
-        "# n_neighbors = list(range(1,30))\n",
-        "# p=[1,2]\n",
-        "# algorithm = ['auto', 'ball_tree', 'kd_tree', 'brute']\n",
-        "# #Convert to dictionary\n",
-        "# hyperparameters = dict(leaf_size=leaf_size, n_neighbors=n_neighbors, p=p, algorithm= algorithm)\n",
-        "# #Create new KNN object\n",
-        "# knn_2 = KNeighborsClassifier()\n",
-        "# #Use GridSearch\n",
-        "# clf = GridSearchCV(knn_2, hyperparameters, cv=5)\n",
-        "# #Fit the model\n",
-        "# best_model = clf.fit(X_over, Y_over)\n",
-        "# #Check performa dari model\n",
-        "# y_pred_ts = clf.predict(X_test)\n",
-        "# multiclass_eval(Y_test, y_pred_ts, name='KNN - Testing Hyperparameter')"
-      ],
-      "metadata": {
-        "id": "zpbSuIIAA3uQ"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "from sklearn.model_selection import RandomizedSearchCV,GridSearchCV\n",
-        "# hyperparameters = dict(\n",
-        "#                        leaf_size = [list(range(1,50))],  \n",
-        "#                        n_neighbors = [list(range(1,30))], \n",
-        "#                        p = [1,2],\n",
-        "#                        algorithm = ['auto', 'ball_tree', 'kd_tree', 'brute']  \n",
-        "#                                              )\n",
-        "\n",
-        "# # Init\n",
-        "# KNN2 = KNeighborsClassifier()\n",
-        "# KNN2_tuned = GridSearchCV(KNN, hyperparameters, cv=10, scoring='roc_auc')\n",
-        "# KNN2_tuned.fit(X_over, Y_over)\n",
-        "\n",
-        "# Predict & Evaluation\n",
-        "# y_pred_ts = KNN2_tuned.predict(X_test)#Check performa dari model\n",
-        "# multiclass_eval(Y_test, y_pred_ts, name='KNN - Testing Hyperparameter')"
+        "from sklearn.model_selection import RandomizedSearchCV,GridSearchCV"
       ],
       "metadata": {
         "id": "aMvZNePu6rqt"
